@@ -321,3 +321,7 @@ Some very minor tweaks, all invisible to js2-mode users, to prepare for porting 
   * fixed Issue #79:  Object properties 'default' and 'return' screwing up parsing -- I've made `js2-allow-keywords-as-property-names` true by default.
 
   * updated Issue #61:  Enter key indents new line -- this was fixed in a previous release, but not marked Fixed in the issues page.  I added a `js2-enter-indents-newline` custom variable that defaults to true.
+
+=Release notes for XXX YY, ZZZZ, js2-zzzzxxyy.el:=
+
+  * fixed highlighting of missing-semicolon warnings in labeled statements
